docs/api/qiskit/0.19/qiskit.qobj.PulseQobjExperiment.mdx
---
title: PulseQobjExperiment (v0.19)
description: API reference for qiskit.qobj.PulseQobjExperiment in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobjExperiment
---

# PulseQobjExperiment

<Class id="qiskit.qobj.PulseQobjExperiment" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/qobj/pulse_qobj.py" signature="PulseQobjExperiment(instructions, config=None, header=None)" modifiers="class">
  A Pulse Qobj Experiment.

  Each instance of this class is used to represent an individual Pulse experiment as part of a larger Pulse Qobj.

  Instantiate a PulseQobjExperiment.

  **Parameters**

  *   **config** ([*PulseQobjExperimentConfig*](qiskit.qobj.PulseQobjExperimentConfig "qiskit.qobj.PulseQobjExperimentConfig")) – A config object for the experiment
  *   **header** (*PulseQobjExperimentHeader*) – A header object for the experiment
  *   **instructions** (*list*) – A list of [`PulseQobjInstruction`](qiskit.qobj.PulseQobjInstruction "qiskit.qobj.PulseQobjInstruction") objects

  ## Methods

  <span id="pulseqobjexperiment-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobjExperiment.from_dict" signature="PulseQobjExperiment.from_dict(data)" modifiers="classmethod">
    Create a new PulseQobjExperiment object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [PulseQobjExperiment](qiskit.qobj.PulseQobjExperiment "qiskit.qobj.PulseQobjExperiment")
  </Function>

  <span id="pulseqobjexperiment-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobjExperiment.to_dict" signature="PulseQobjExperiment.to_dict()">
    Return a dictionary format representation of the Experiment.

    **Returns**

    The dictionary form of the PulseQobjExperiment.

    **Return type**

    dict
  </Function>
</Class>

