docs/api/qiskit/1.2/qiskit.qobj.PulseQobjExperiment.mdx
---
title: PulseQobjExperiment (v1.2)
description: API reference for qiskit.qobj.PulseQobjExperiment in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobjExperiment
---

# PulseQobjExperiment

<Class id="qiskit.qobj.PulseQobjExperiment" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L404-L503" signature="qiskit.qobj.PulseQobjExperiment(instructions, config=None, header=None)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  A Pulse Qobj Experiment.

  Each instance of this class is used to represent an individual Pulse experiment as part of a larger Pulse Qobj.

  Instantiate a PulseQobjExperiment.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.pulse_qobj.PulseQobjExperiment` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **config** ([*PulseQobjExperimentConfig*](qiskit.qobj.PulseQobjExperimentConfig "qiskit.qobj.PulseQobjExperimentConfig")) – A config object for the experiment
  *   **header** (*PulseQobjExperimentHeader*) – A header object for the experiment
  *   **instructions** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – A list of [`PulseQobjInstruction`](qiskit.qobj.PulseQobjInstruction "qiskit.qobj.PulseQobjInstruction") objects

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobjExperiment.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L476-L497" signature="from_dict(data)" modifiers="classmethod">
    Create a new PulseQobjExperiment object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [PulseQobjExperiment](#qiskit.qobj.PulseQobjExperiment "qiskit.qobj.PulseQobjExperiment")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobjExperiment.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L433-L444" signature="to_dict()">
    Return a dictionary format representation of the Experiment.

    **Returns**

    The dictionary form of the PulseQobjExperiment.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

